<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <include layout="@layout/toolbar_mainmenu"
        android:id="@+id/incMenu"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/incMenu">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_permissao"
            android:textSize="30dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="5dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chkNotaPaulista"
            android:textSize="17dp"
            android:text="@string/nota_paulista"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_notificacao"
            android:textSize="30dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chkPromocao"
            android:textSize="17dp"
            android:text="@string/email_promocao"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chkNovosRestaurantes"
            android:textSize="17dp"
            android:text="@string/novos_restaurantes"/>
    </LinearLayout>

</RelativeLayout>